.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/styles.css
/* ... */
.aw-blog-read-more{display:none;}
.actuWrapper{clear:both;min-height:205px;margin-bottom:5%;}
#simplemodal-container{width:80% !important;}
.pdf_news{font-size:18px;margin-top:20px;width:80%;float:right;}
#simplemodal-container a.modalCloseImg{background:url(/skin/frontend/jumbobag/default/images/x.png) no-repeat;width:25px;height:29px;display:inline;z-index:3200;position:absolute;top:-15px;right:-18px;cursor:pointer;}
.pdf_news a:hover{text-decoration:none;color:rgb(39, 56, 132);}
.postWrapper h3{font-size:14px;}
.postWrapper h1{letter-spacing:0.5px !important;}
.issuuembed{margin-bottom:10%;}
.pdf_soon{margin-top:5%;font-weight:bold;}

/*----------New Header----------------*/

.wm-header{ float: left; width: 100%; background-color: #31419f; }
.wm-contener{ margin: 0 auto; width: 1015px; display: table; }
.wm-main-header{ float: left; width: 100%; }
.wm-full-header {  float: left;   width: 100%;}
.wm-full-header .logo {  float: left;    width: auto; margin-right: 55px;}
.wm-currency {   float: left;   width: auto; margin: 19px 10px 19px 0;}
.wm-currency .header-switch span, .wm-language .header-switch span{ padding: 0;}
.wm-full-header  .language-switch{ margin-left: 0px; }
.wm-language {   float: left;   width: auto; margin: 19px 10px 19px 0;}
.wm-full-header .nav-container{ float: left; width: auto; margin: 25px 0 0px 9%;}
.wm-full-header .top-dropdowns { position: relative;right: 0;top: 0;margin: 14px 0 0 0;float: right;width: auto;}
.wm-full-header .top-dropdowns .cart-top-container{margin: 0px 0px 0 15px;    padding-bottom: 14px;   padding-right: 95px;}
.wm-full-header .nav-container #queldoreiNav{ width: auto;  margin: 0;}
.wm-language .header-dropdown, .wm-currency .header-dropdown{ z-index: 999;     top: 45px;}
.wm-currency .header-switch span.current {   color: #fff;   font-size: 12px;  font-family: 'Lato', sans-serif;}

.header-switch span.current{float: left;}
.wm-full-header #queldoreiNav>li{
	box-shadow: none;
	width: 175px;
	background-color: #31419f;
	margin: 0;
	line-height: 40px;
}
.wm-full-header #queldoreiNav>li.active>a {
	background-color: transparent;
}
.wm-full-header #queldoreiNav>li>a{ color: #fff; opacity: 0.8;font-family: 'Lato', sans-serif; font-weight: 900;}
.wm-full-header #queldoreiNav>li:hover, .wm-full-header #queldoreiNav>li.over, .wm-full-header #queldoreiNav>li.active{ box-shadow: none;}
.wm-full-header #queldoreiNav li.level0:hover a, .wm-full-header #queldoreiNav li.level0.active a{opacity: 1; color: #fff;}
.wm-full-header #queldoreiNav li.level0 ul a, .wm-full-header #queldoreiNav li.level0.active ul a{ padding-bottom: 0; }
.wm-full-header #queldoreiNav>li>a>span{
	font-weight: 800;
	letter-spacing: normal;
	padding: 0px 10px;
	border-top: 0px solid transparent;
	line-height: inherit;
}

.wm-full-header #queldoreiNav>li:hover>a>span, .wm-full-header #queldoreiNav>li.over>a>span, .wm-full-header #queldoreiNav>li.active>a>span {
    background: transparent; border:0;
}
.wm-full-header .search-top, .wm-full-header .cart-top-title a span.icon, .wm-full-header .cart-top > a{ background-color: transparent; }
.wm-full-header .search-top, .wm-full-header .search-top-container .search-form .search-top-title span.icon,
.wm-full-header .cart-top > a, .wm-full-header .cart-top-title a span.icon{background-size: 34px 34px;}
.wm-full-header .search-top:hover {   background-color: transparent;}
.wm-full-header .cart-top > a:hover {   background-color: transparent; }
.wm-full-header .cart-top > a span{ color: #fff; font-size: 14px;padding-right: 15px; font-family: 'Lato', sans-serif; background: transparent url('../images/arrow_switch.png') 100% 50% no-repeat;}
.wm-myaccount{ width: 34px; height: 34px; float: right; background: transparent url('../images/icon_myaccout.png') 50% 50% no-repeat; margin:2px 0px 0px 15px; }
.wm-myaccount a {  float: left;   width: 100%;   height: 100%;}
.wm-full-header .mobile-summary{display: none;}

.header-switch:hover .header-dropdown {   display: block;}
.search-top-container:hover .search-form {   display: block;}

.search-top-container{ padding-bottom: 14px; }
.cart-top-container .details{ right: 0!important; }
.cart-top-container .details .button, .cart-top-container .details .btn-continue { margin: 0!important;}
/*--------------End header------------*/
/*-----------New Category Page--------*/

.category-image{ display: none; }
.featured-product-label {
    position: absolute;
    z-index: 100000;
    background-color: #30409f;
    color: #fff;
    padding: 0px 15px;
    text-transform: uppercase;
    font-size: 14px;
	font-family: 'Lato', sans-serif;
	font-weight: 900;
    line-height: 24px;
    left: -10px;
    top: 10px;
}
.out-of-stock-label{
	position: absolute;
    z-index: 99999;
    background-color: #ed1c24;
    color: #fff;
    padding: 0px 15px;
    text-transform: uppercase;
    font-size: 14px;
	font-family: 'Lato', sans-serif;
	font-weight: 900;
    line-height: 24px;
    left: -10px;
    top: 10px;

}
.product-info-bottom-left {   float: left;   max-width: 74%;}
.product-info-bottom-right {   float: right;}
.catalog-category-view .products-grid .product-name {
    color: #30409f;
    font-size: 16px;
    display: block;
    margin: 0;
    line-height: normal;
    text-transform: uppercase;
    font-family: 'Lato', sans-serif;
	font-weight: 700;
}
.catalog-category-view .products-grid .collection-name {
    color: #30409f;
    font-size: 14px;
    display: none;
    margin: 0;
    line-height: normal;
    text-transform: uppercase;
    font-family: 'Lato', sans-serif;
	font-weight: 200;
}
.catalog-category-view .products-grid .price-box .price {
	font-family: 'Lato', sans-serif;
	font-weight: 700;
    font-size: 16px;
    padding-bottom: 21px;
    margin-bottom: 5px;
    float: right;
}
.catalog-category-view .products-grid .price-label{ display: none; }
.catalog-category-view .products-grid .old-price .price{color: #30409f; right: 0; padding-bottom: 0px; position: absolute; bottom: 0;}
/* ... */

